// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemsList > should match snapshot with position 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col gap-8"
      >
        <div
          class="flex flex-col gap-2"
        >
          <div>
            <div
              class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px]"
            >
              <header
                class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
              >
                <span
                  class="text-center w-[2rem] text-xl"
                >
                  1
                </span>
                <img
                  alt="Darkthrone"
                  class="rounded-md"
                  data-nimg="1"
                  decoding="async"
                  height="48"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                  style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                  width="48"
                />
                <div
                  class="flex flex-col items-start w-full overflow-hidden"
                >
                  <a
                    class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                    href="/artist/123"
                  >
                    <h3
                      class="text-xl md:text-2xl truncate"
                    >
                      Darkthrone
                    </h3>
                  </a>
                  <div
                    class="flex justify-between w-full items-center"
                  />
                </div>
              </header>
              <div
                class="self-end min-w-[22px]"
              >
                <button
                  data-state="closed"
                >
                  <a
                    href="https://spotify.com"
                    target="_blank"
                  >
                    <img
                      alt=""
                      class="min-w-[20px] h-[20px]"
                      data-nimg="1"
                      decoding="async"
                      height="20"
                      loading="lazy"
                      src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                      srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                      style="color: transparent;"
                      width="20"
                    />
                  </a>
                </button>
              </div>
            </div>
            <div
              class="shrink-0 bg-border h-[1px] w-full"
              data-orientation="horizontal"
              role="none"
            />
          </div>
          <div>
            <div
              class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px]"
            >
              <header
                class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
              >
                <span
                  class="text-center w-[2rem] text-xl"
                >
                  2
                </span>
                <img
                  alt="Darkthrone"
                  class="rounded-md"
                  data-nimg="1"
                  decoding="async"
                  height="48"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                  style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                  width="48"
                />
                <div
                  class="flex flex-col items-start w-full overflow-hidden"
                >
                  <a
                    class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                    href="/artist/2"
                  >
                    <h3
                      class="text-xl md:text-2xl truncate"
                    >
                      Darkthrone
                    </h3>
                  </a>
                  <div
                    class="flex justify-between w-full items-center"
                  />
                </div>
              </header>
              <div
                class="self-end min-w-[22px]"
              >
                <button
                  data-state="closed"
                >
                  <a
                    href="https://spotify.com"
                    target="_blank"
                  >
                    <img
                      alt=""
                      class="min-w-[20px] h-[20px]"
                      data-nimg="1"
                      decoding="async"
                      height="20"
                      loading="lazy"
                      src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                      srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                      style="color: transparent;"
                      width="20"
                    />
                  </a>
                </button>
              </div>
            </div>
            <div
              class="shrink-0 bg-border h-[1px] w-full"
              data-orientation="horizontal"
              role="none"
            />
          </div>
          <div>
            <div
              class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px]"
            >
              <header
                class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
              >
                <span
                  class="text-center w-[2rem] text-xl"
                >
                  3
                </span>
                <img
                  alt="Darkthrone"
                  class="rounded-md"
                  data-nimg="1"
                  decoding="async"
                  height="48"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                  style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                  width="48"
                />
                <div
                  class="flex flex-col items-start w-full overflow-hidden"
                >
                  <a
                    class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                    href="/artist/3"
                  >
                    <h3
                      class="text-xl md:text-2xl truncate"
                    >
                      Darkthrone
                    </h3>
                  </a>
                  <div
                    class="flex justify-between w-full items-center"
                  />
                </div>
              </header>
              <div
                class="self-end min-w-[22px]"
              >
                <button
                  data-state="closed"
                >
                  <a
                    href="https://spotify.com"
                    target="_blank"
                  >
                    <img
                      alt=""
                      class="min-w-[20px] h-[20px]"
                      data-nimg="1"
                      decoding="async"
                      height="20"
                      loading="lazy"
                      src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                      srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                      style="color: transparent;"
                      width="20"
                    />
                  </a>
                </button>
              </div>
            </div>
            <div
              class="shrink-0 bg-border h-[1px] w-full"
              data-orientation="horizontal"
              role="none"
            />
          </div>
          <div>
            <div
              class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px]"
            >
              <header
                class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
              >
                <span
                  class="text-center w-[2rem] text-xl"
                >
                  4
                </span>
                <img
                  alt="Darkthrone"
                  class="rounded-md"
                  data-nimg="1"
                  decoding="async"
                  height="48"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                  style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                  width="48"
                />
                <div
                  class="flex flex-col items-start w-full overflow-hidden"
                >
                  <a
                    class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                    href="/artist/4"
                  >
                    <h3
                      class="text-xl md:text-2xl truncate"
                    >
                      Darkthrone
                    </h3>
                  </a>
                  <div
                    class="flex justify-between w-full items-center"
                  />
                </div>
              </header>
              <div
                class="self-end min-w-[22px]"
              >
                <button
                  data-state="closed"
                >
                  <a
                    href="https://spotify.com"
                    target="_blank"
                  >
                    <img
                      alt=""
                      class="min-w-[20px] h-[20px]"
                      data-nimg="1"
                      decoding="async"
                      height="20"
                      loading="lazy"
                      src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                      srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                      style="color: transparent;"
                      width="20"
                    />
                  </a>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col gap-8"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div>
          <div
            class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px]"
          >
            <header
              class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
            >
              <span
                class="text-center w-[2rem] text-xl"
              >
                1
              </span>
              <img
                alt="Darkthrone"
                class="rounded-md"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                width="48"
              />
              <div
                class="flex flex-col items-start w-full overflow-hidden"
              >
                <a
                  class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                  href="/artist/123"
                >
                  <h3
                    class="text-xl md:text-2xl truncate"
                  >
                    Darkthrone
                  </h3>
                </a>
                <div
                  class="flex justify-between w-full items-center"
                />
              </div>
            </header>
            <div
              class="self-end min-w-[22px]"
            >
              <button
                data-state="closed"
              >
                <a
                  href="https://spotify.com"
                  target="_blank"
                >
                  <img
                    alt=""
                    class="min-w-[20px] h-[20px]"
                    data-nimg="1"
                    decoding="async"
                    height="20"
                    loading="lazy"
                    src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                    srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                    style="color: transparent;"
                    width="20"
                  />
                </a>
              </button>
            </div>
          </div>
          <div
            class="shrink-0 bg-border h-[1px] w-full"
            data-orientation="horizontal"
            role="none"
          />
        </div>
        <div>
          <div
            class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px]"
          >
            <header
              class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
            >
              <span
                class="text-center w-[2rem] text-xl"
              >
                2
              </span>
              <img
                alt="Darkthrone"
                class="rounded-md"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                width="48"
              />
              <div
                class="flex flex-col items-start w-full overflow-hidden"
              >
                <a
                  class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                  href="/artist/2"
                >
                  <h3
                    class="text-xl md:text-2xl truncate"
                  >
                    Darkthrone
                  </h3>
                </a>
                <div
                  class="flex justify-between w-full items-center"
                />
              </div>
            </header>
            <div
              class="self-end min-w-[22px]"
            >
              <button
                data-state="closed"
              >
                <a
                  href="https://spotify.com"
                  target="_blank"
                >
                  <img
                    alt=""
                    class="min-w-[20px] h-[20px]"
                    data-nimg="1"
                    decoding="async"
                    height="20"
                    loading="lazy"
                    src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                    srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                    style="color: transparent;"
                    width="20"
                  />
                </a>
              </button>
            </div>
          </div>
          <div
            class="shrink-0 bg-border h-[1px] w-full"
            data-orientation="horizontal"
            role="none"
          />
        </div>
        <div>
          <div
            class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px]"
          >
            <header
              class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
            >
              <span
                class="text-center w-[2rem] text-xl"
              >
                3
              </span>
              <img
                alt="Darkthrone"
                class="rounded-md"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                width="48"
              />
              <div
                class="flex flex-col items-start w-full overflow-hidden"
              >
                <a
                  class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                  href="/artist/3"
                >
                  <h3
                    class="text-xl md:text-2xl truncate"
                  >
                    Darkthrone
                  </h3>
                </a>
                <div
                  class="flex justify-between w-full items-center"
                />
              </div>
            </header>
            <div
              class="self-end min-w-[22px]"
            >
              <button
                data-state="closed"
              >
                <a
                  href="https://spotify.com"
                  target="_blank"
                >
                  <img
                    alt=""
                    class="min-w-[20px] h-[20px]"
                    data-nimg="1"
                    decoding="async"
                    height="20"
                    loading="lazy"
                    src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                    srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                    style="color: transparent;"
                    width="20"
                  />
                </a>
              </button>
            </div>
          </div>
          <div
            class="shrink-0 bg-border h-[1px] w-full"
            data-orientation="horizontal"
            role="none"
          />
        </div>
        <div>
          <div
            class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px]"
          >
            <header
              class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
            >
              <span
                class="text-center w-[2rem] text-xl"
              >
                4
              </span>
              <img
                alt="Darkthrone"
                class="rounded-md"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                width="48"
              />
              <div
                class="flex flex-col items-start w-full overflow-hidden"
              >
                <a
                  class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                  href="/artist/4"
                >
                  <h3
                    class="text-xl md:text-2xl truncate"
                  >
                    Darkthrone
                  </h3>
                </a>
                <div
                  class="flex justify-between w-full items-center"
                />
              </div>
            </header>
            <div
              class="self-end min-w-[22px]"
            >
              <button
                data-state="closed"
              >
                <a
                  href="https://spotify.com"
                  target="_blank"
                >
                  <img
                    alt=""
                    class="min-w-[20px] h-[20px]"
                    data-nimg="1"
                    decoding="async"
                    height="20"
                    loading="lazy"
                    src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                    srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                    style="color: transparent;"
                    width="20"
                  />
                </a>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ItemsList > should match snapshot with position size 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col gap-8"
      >
        <div
          class="flex flex-col gap-2"
        >
          <div>
            <div
              class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px]"
            >
              <header
                class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
              >
                <span
                  class="text-center w-[2rem] text-3xl"
                >
                  1
                </span>
                <img
                  alt="Darkthrone"
                  class="rounded-md"
                  data-nimg="1"
                  decoding="async"
                  height="48"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                  style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                  width="48"
                />
                <div
                  class="flex flex-col items-start w-full overflow-hidden"
                >
                  <a
                    class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                    href="/artist/123"
                  >
                    <h3
                      class="text-xl md:text-2xl truncate"
                    >
                      Darkthrone
                    </h3>
                  </a>
                  <div
                    class="flex justify-between w-full items-center"
                  />
                </div>
              </header>
              <div
                class="self-end min-w-[22px]"
              >
                <button
                  data-state="closed"
                >
                  <a
                    href="https://spotify.com"
                    target="_blank"
                  >
                    <img
                      alt=""
                      class="min-w-[20px] h-[20px]"
                      data-nimg="1"
                      decoding="async"
                      height="20"
                      loading="lazy"
                      src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                      srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                      style="color: transparent;"
                      width="20"
                    />
                  </a>
                </button>
              </div>
            </div>
            <div
              class="shrink-0 bg-border h-[1px] w-full"
              data-orientation="horizontal"
              role="none"
            />
          </div>
          <div>
            <div
              class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px]"
            >
              <header
                class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
              >
                <span
                  class="text-center w-[2rem] text-3xl"
                >
                  2
                </span>
                <img
                  alt="Darkthrone"
                  class="rounded-md"
                  data-nimg="1"
                  decoding="async"
                  height="48"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                  style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                  width="48"
                />
                <div
                  class="flex flex-col items-start w-full overflow-hidden"
                >
                  <a
                    class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                    href="/artist/2"
                  >
                    <h3
                      class="text-xl md:text-2xl truncate"
                    >
                      Darkthrone
                    </h3>
                  </a>
                  <div
                    class="flex justify-between w-full items-center"
                  />
                </div>
              </header>
              <div
                class="self-end min-w-[22px]"
              >
                <button
                  data-state="closed"
                >
                  <a
                    href="https://spotify.com"
                    target="_blank"
                  >
                    <img
                      alt=""
                      class="min-w-[20px] h-[20px]"
                      data-nimg="1"
                      decoding="async"
                      height="20"
                      loading="lazy"
                      src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                      srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                      style="color: transparent;"
                      width="20"
                    />
                  </a>
                </button>
              </div>
            </div>
            <div
              class="shrink-0 bg-border h-[1px] w-full"
              data-orientation="horizontal"
              role="none"
            />
          </div>
          <div>
            <div
              class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px]"
            >
              <header
                class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
              >
                <span
                  class="text-center w-[2rem] text-3xl"
                >
                  3
                </span>
                <img
                  alt="Darkthrone"
                  class="rounded-md"
                  data-nimg="1"
                  decoding="async"
                  height="48"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                  style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                  width="48"
                />
                <div
                  class="flex flex-col items-start w-full overflow-hidden"
                >
                  <a
                    class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                    href="/artist/3"
                  >
                    <h3
                      class="text-xl md:text-2xl truncate"
                    >
                      Darkthrone
                    </h3>
                  </a>
                  <div
                    class="flex justify-between w-full items-center"
                  />
                </div>
              </header>
              <div
                class="self-end min-w-[22px]"
              >
                <button
                  data-state="closed"
                >
                  <a
                    href="https://spotify.com"
                    target="_blank"
                  >
                    <img
                      alt=""
                      class="min-w-[20px] h-[20px]"
                      data-nimg="1"
                      decoding="async"
                      height="20"
                      loading="lazy"
                      src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                      srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                      style="color: transparent;"
                      width="20"
                    />
                  </a>
                </button>
              </div>
            </div>
            <div
              class="shrink-0 bg-border h-[1px] w-full"
              data-orientation="horizontal"
              role="none"
            />
          </div>
          <div>
            <div
              class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px]"
            >
              <header
                class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
              >
                <span
                  class="text-center w-[2rem] text-3xl"
                >
                  4
                </span>
                <img
                  alt="Darkthrone"
                  class="rounded-md"
                  data-nimg="1"
                  decoding="async"
                  height="48"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                  style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                  width="48"
                />
                <div
                  class="flex flex-col items-start w-full overflow-hidden"
                >
                  <a
                    class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                    href="/artist/4"
                  >
                    <h3
                      class="text-xl md:text-2xl truncate"
                    >
                      Darkthrone
                    </h3>
                  </a>
                  <div
                    class="flex justify-between w-full items-center"
                  />
                </div>
              </header>
              <div
                class="self-end min-w-[22px]"
              >
                <button
                  data-state="closed"
                >
                  <a
                    href="https://spotify.com"
                    target="_blank"
                  >
                    <img
                      alt=""
                      class="min-w-[20px] h-[20px]"
                      data-nimg="1"
                      decoding="async"
                      height="20"
                      loading="lazy"
                      src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                      srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                      style="color: transparent;"
                      width="20"
                    />
                  </a>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col gap-8"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div>
          <div
            class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px]"
          >
            <header
              class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
            >
              <span
                class="text-center w-[2rem] text-3xl"
              >
                1
              </span>
              <img
                alt="Darkthrone"
                class="rounded-md"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                width="48"
              />
              <div
                class="flex flex-col items-start w-full overflow-hidden"
              >
                <a
                  class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                  href="/artist/123"
                >
                  <h3
                    class="text-xl md:text-2xl truncate"
                  >
                    Darkthrone
                  </h3>
                </a>
                <div
                  class="flex justify-between w-full items-center"
                />
              </div>
            </header>
            <div
              class="self-end min-w-[22px]"
            >
              <button
                data-state="closed"
              >
                <a
                  href="https://spotify.com"
                  target="_blank"
                >
                  <img
                    alt=""
                    class="min-w-[20px] h-[20px]"
                    data-nimg="1"
                    decoding="async"
                    height="20"
                    loading="lazy"
                    src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                    srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                    style="color: transparent;"
                    width="20"
                  />
                </a>
              </button>
            </div>
          </div>
          <div
            class="shrink-0 bg-border h-[1px] w-full"
            data-orientation="horizontal"
            role="none"
          />
        </div>
        <div>
          <div
            class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px]"
          >
            <header
              class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
            >
              <span
                class="text-center w-[2rem] text-3xl"
              >
                2
              </span>
              <img
                alt="Darkthrone"
                class="rounded-md"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                width="48"
              />
              <div
                class="flex flex-col items-start w-full overflow-hidden"
              >
                <a
                  class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                  href="/artist/2"
                >
                  <h3
                    class="text-xl md:text-2xl truncate"
                  >
                    Darkthrone
                  </h3>
                </a>
                <div
                  class="flex justify-between w-full items-center"
                />
              </div>
            </header>
            <div
              class="self-end min-w-[22px]"
            >
              <button
                data-state="closed"
              >
                <a
                  href="https://spotify.com"
                  target="_blank"
                >
                  <img
                    alt=""
                    class="min-w-[20px] h-[20px]"
                    data-nimg="1"
                    decoding="async"
                    height="20"
                    loading="lazy"
                    src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                    srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                    style="color: transparent;"
                    width="20"
                  />
                </a>
              </button>
            </div>
          </div>
          <div
            class="shrink-0 bg-border h-[1px] w-full"
            data-orientation="horizontal"
            role="none"
          />
        </div>
        <div>
          <div
            class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px]"
          >
            <header
              class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
            >
              <span
                class="text-center w-[2rem] text-3xl"
              >
                3
              </span>
              <img
                alt="Darkthrone"
                class="rounded-md"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                width="48"
              />
              <div
                class="flex flex-col items-start w-full overflow-hidden"
              >
                <a
                  class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                  href="/artist/3"
                >
                  <h3
                    class="text-xl md:text-2xl truncate"
                  >
                    Darkthrone
                  </h3>
                </a>
                <div
                  class="flex justify-between w-full items-center"
                />
              </div>
            </header>
            <div
              class="self-end min-w-[22px]"
            >
              <button
                data-state="closed"
              >
                <a
                  href="https://spotify.com"
                  target="_blank"
                >
                  <img
                    alt=""
                    class="min-w-[20px] h-[20px]"
                    data-nimg="1"
                    decoding="async"
                    height="20"
                    loading="lazy"
                    src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                    srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                    style="color: transparent;"
                    width="20"
                  />
                </a>
              </button>
            </div>
          </div>
          <div
            class="shrink-0 bg-border h-[1px] w-full"
            data-orientation="horizontal"
            role="none"
          />
        </div>
        <div>
          <div
            class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px]"
          >
            <header
              class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
            >
              <span
                class="text-center w-[2rem] text-3xl"
              >
                4
              </span>
              <img
                alt="Darkthrone"
                class="rounded-md"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                width="48"
              />
              <div
                class="flex flex-col items-start w-full overflow-hidden"
              >
                <a
                  class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                  href="/artist/4"
                >
                  <h3
                    class="text-xl md:text-2xl truncate"
                  >
                    Darkthrone
                  </h3>
                </a>
                <div
                  class="flex justify-between w-full items-center"
                />
              </div>
            </header>
            <div
              class="self-end min-w-[22px]"
            >
              <button
                data-state="closed"
              >
                <a
                  href="https://spotify.com"
                  target="_blank"
                >
                  <img
                    alt=""
                    class="min-w-[20px] h-[20px]"
                    data-nimg="1"
                    decoding="async"
                    height="20"
                    loading="lazy"
                    src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                    srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                    style="color: transparent;"
                    width="20"
                  />
                </a>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ItemsList > should match snapshot with relative time 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex flex-col gap-8"
      >
        <div
          class="flex flex-col gap-2"
        >
          <div>
            <div
              class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px] md:px-4"
            >
              <header
                class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
              >
                <img
                  alt="Track 1"
                  class="rounded-md"
                  data-nimg="1"
                  decoding="async"
                  height="48"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                  style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                  width="48"
                />
                <div
                  class="flex flex-col items-start w-full overflow-hidden"
                >
                  <a
                    class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                    href="/track/123"
                  >
                    <h3
                      class="text-xl md:text-2xl truncate"
                    >
                      Track 1
                    </h3>
                  </a>
                  <div
                    class="flex justify-between w-full items-center"
                  >
                    <span>
                      <a
                        class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 underline-offset-4 hover:underline p-0 text-primary-foreground/80 h-auto text-md"
                        href="/artist/123"
                      >
                        Darkthrone
                      </a>
                    </span>
                    <p
                      class="text-primary-foreground/80 whitespace-nowrap"
                    >
                      2 lata temu
                    </p>
                  </div>
                </div>
              </header>
              <div
                class="self-end min-w-[22px]"
              >
                <button
                  data-state="closed"
                >
                  <a
                    href="https://spotify.com"
                    target="_blank"
                  >
                    <img
                      alt=""
                      class="min-w-[20px] h-[20px]"
                      data-nimg="1"
                      decoding="async"
                      height="20"
                      loading="lazy"
                      src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                      srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                      style="color: transparent;"
                      width="20"
                    />
                  </a>
                </button>
              </div>
            </div>
            <div
              class="shrink-0 bg-border h-[1px] w-full"
              data-orientation="horizontal"
              role="none"
            />
          </div>
          <div>
            <div
              class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px] md:px-4"
            >
              <header
                class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
              >
                <img
                  alt="Track 1"
                  class="rounded-md"
                  data-nimg="1"
                  decoding="async"
                  height="48"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                  style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                  width="48"
                />
                <div
                  class="flex flex-col items-start w-full overflow-hidden"
                >
                  <a
                    class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                    href="/track/2"
                  >
                    <h3
                      class="text-xl md:text-2xl truncate"
                    >
                      Track 1
                    </h3>
                  </a>
                  <div
                    class="flex justify-between w-full items-center"
                  >
                    <span>
                      <a
                        class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 underline-offset-4 hover:underline p-0 text-primary-foreground/80 h-auto text-md"
                        href="/artist/123"
                      >
                        Darkthrone
                      </a>
                    </span>
                    <p
                      class="text-primary-foreground/80 whitespace-nowrap"
                    >
                      2 lata temu
                    </p>
                  </div>
                </div>
              </header>
              <div
                class="self-end min-w-[22px]"
              >
                <button
                  data-state="closed"
                >
                  <a
                    href="https://spotify.com"
                    target="_blank"
                  >
                    <img
                      alt=""
                      class="min-w-[20px] h-[20px]"
                      data-nimg="1"
                      decoding="async"
                      height="20"
                      loading="lazy"
                      src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                      srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                      style="color: transparent;"
                      width="20"
                    />
                  </a>
                </button>
              </div>
            </div>
            <div
              class="shrink-0 bg-border h-[1px] w-full"
              data-orientation="horizontal"
              role="none"
            />
          </div>
          <div>
            <div
              class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px] md:px-4"
            >
              <header
                class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
              >
                <img
                  alt="Track 1"
                  class="rounded-md"
                  data-nimg="1"
                  decoding="async"
                  height="48"
                  loading="lazy"
                  src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                  srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                  style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                  width="48"
                />
                <div
                  class="flex flex-col items-start w-full overflow-hidden"
                >
                  <a
                    class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                    href="/track/3"
                  >
                    <h3
                      class="text-xl md:text-2xl truncate"
                    >
                      Track 1
                    </h3>
                  </a>
                  <div
                    class="flex justify-between w-full items-center"
                  >
                    <span>
                      <a
                        class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 underline-offset-4 hover:underline p-0 text-primary-foreground/80 h-auto text-md"
                        href="/artist/123"
                      >
                        Darkthrone
                      </a>
                    </span>
                    <p
                      class="text-primary-foreground/80 whitespace-nowrap"
                    >
                      2 lata temu
                    </p>
                  </div>
                </div>
              </header>
              <div
                class="self-end min-w-[22px]"
              >
                <button
                  data-state="closed"
                >
                  <a
                    href="https://spotify.com"
                    target="_blank"
                  >
                    <img
                      alt=""
                      class="min-w-[20px] h-[20px]"
                      data-nimg="1"
                      decoding="async"
                      height="20"
                      loading="lazy"
                      src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                      srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                      style="color: transparent;"
                      width="20"
                    />
                  </a>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex flex-col gap-8"
    >
      <div
        class="flex flex-col gap-2"
      >
        <div>
          <div
            class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px] md:px-4"
          >
            <header
              class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
            >
              <img
                alt="Track 1"
                class="rounded-md"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                width="48"
              />
              <div
                class="flex flex-col items-start w-full overflow-hidden"
              >
                <a
                  class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                  href="/track/123"
                >
                  <h3
                    class="text-xl md:text-2xl truncate"
                  >
                    Track 1
                  </h3>
                </a>
                <div
                  class="flex justify-between w-full items-center"
                >
                  <span>
                    <a
                      class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 underline-offset-4 hover:underline p-0 text-primary-foreground/80 h-auto text-md"
                      href="/artist/123"
                    >
                      Darkthrone
                    </a>
                  </span>
                  <p
                    class="text-primary-foreground/80 whitespace-nowrap"
                  >
                    2 lata temu
                  </p>
                </div>
              </div>
            </header>
            <div
              class="self-end min-w-[22px]"
            >
              <button
                data-state="closed"
              >
                <a
                  href="https://spotify.com"
                  target="_blank"
                >
                  <img
                    alt=""
                    class="min-w-[20px] h-[20px]"
                    data-nimg="1"
                    decoding="async"
                    height="20"
                    loading="lazy"
                    src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                    srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                    style="color: transparent;"
                    width="20"
                  />
                </a>
              </button>
            </div>
          </div>
          <div
            class="shrink-0 bg-border h-[1px] w-full"
            data-orientation="horizontal"
            role="none"
          />
        </div>
        <div>
          <div
            class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px] md:px-4"
          >
            <header
              class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
            >
              <img
                alt="Track 1"
                class="rounded-md"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                width="48"
              />
              <div
                class="flex flex-col items-start w-full overflow-hidden"
              >
                <a
                  class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                  href="/track/2"
                >
                  <h3
                    class="text-xl md:text-2xl truncate"
                  >
                    Track 1
                  </h3>
                </a>
                <div
                  class="flex justify-between w-full items-center"
                >
                  <span>
                    <a
                      class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 underline-offset-4 hover:underline p-0 text-primary-foreground/80 h-auto text-md"
                      href="/artist/123"
                    >
                      Darkthrone
                    </a>
                  </span>
                  <p
                    class="text-primary-foreground/80 whitespace-nowrap"
                  >
                    2 lata temu
                  </p>
                </div>
              </div>
            </header>
            <div
              class="self-end min-w-[22px]"
            >
              <button
                data-state="closed"
              >
                <a
                  href="https://spotify.com"
                  target="_blank"
                >
                  <img
                    alt=""
                    class="min-w-[20px] h-[20px]"
                    data-nimg="1"
                    decoding="async"
                    height="20"
                    loading="lazy"
                    src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                    srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                    style="color: transparent;"
                    width="20"
                  />
                </a>
              </button>
            </div>
          </div>
          <div
            class="shrink-0 bg-border h-[1px] w-full"
            data-orientation="horizontal"
            role="none"
          />
        </div>
        <div>
          <div
            class="flex flex-row justify-between p-2 gap-2 md:gap-4 h-[72px] md:px-4"
          >
            <header
              class="flex flex-row items-center gap-4 w-full max-w-[calc(100%-30px)]"
            >
              <img
                alt="Track 1"
                class="rounded-md"
                data-nimg="1"
                decoding="async"
                height="48"
                loading="lazy"
                src="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75"
                srcset="/_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=48&q=75 1x, /_next/image?url=https%3A%2F%2Fspotify.com%2Fimage.png&w=96&q=75 2x"
                style="color: transparent; min-height: 48px; max-height: 48px; min-width: 48px; max-width: 48px; object-fit: cover;"
                width="48"
              />
              <div
                class="flex flex-col items-start w-full overflow-hidden"
              >
                <a
                  class="items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 text-primary-foreground underline-offset-4 hover:underline h-9 text-lg p-0 leading-5 inline-grid"
                  href="/track/3"
                >
                  <h3
                    class="text-xl md:text-2xl truncate"
                  >
                    Track 1
                  </h3>
                </a>
                <div
                  class="flex justify-between w-full items-center"
                >
                  <span>
                    <a
                      class="inline-flex items-center justify-center whitespace-nowrap rounded-md font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 underline-offset-4 hover:underline p-0 text-primary-foreground/80 h-auto text-md"
                      href="/artist/123"
                    >
                      Darkthrone
                    </a>
                  </span>
                  <p
                    class="text-primary-foreground/80 whitespace-nowrap"
                  >
                    2 lata temu
                  </p>
                </div>
              </div>
            </header>
            <div
              class="self-end min-w-[22px]"
            >
              <button
                data-state="closed"
              >
                <a
                  href="https://spotify.com"
                  target="_blank"
                >
                  <img
                    alt=""
                    class="min-w-[20px] h-[20px]"
                    data-nimg="1"
                    decoding="async"
                    height="20"
                    loading="lazy"
                    src="/_next/image?url=%2Fspotify-icon-white.png&w=48&q=75"
                    srcset="/_next/image?url=%2Fspotify-icon-white.png&w=32&q=75 1x, /_next/image?url=%2Fspotify-icon-white.png&w=48&q=75 2x"
                    style="color: transparent;"
                    width="20"
                  />
                </a>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
